--- a/molecule/cloud-aws-oracle-11-delegated/molecule.yml
+++ b/molecule/cloud-aws-oracle-11-delegated/molecule.yml
@@ -4,7 +4,7 @@ dependency:
   options:
     role-file: requirements.yml
 driver:
-  name: delegated
+  name: ec2
 lint:
   name: yamllint
   options:
@@ -27,8 +27,8 @@ provisioner:
   name: ansible
   log: True
   playbooks:
-    create: ../resources/provisioning/AWS/create.yml
-    prepare: ../resources/provisioning/AWS/prepare.yml
+    create: ../resources/create.yml
+    prepare: ../resources/prepare.yml
     destroy: ../resources/provisioning/AWS/destroy.yml
   lint:
     name: ansible-lint
