add testinfra test

--- a/molecule/docker-oracle-xe/molecule.yml
+++ b/molecule/docker-oracle-xe/molecule.yml
@@ -28,5 +28,7 @@ verifier:
   options:
     verbose: true
   directory: ../resources/tests/
+  additional_files_or_dirs:
+    - oracledb_xe_test.py
   lint:
     name: flake8
