oracledb 11 EPC testinfra test debug 1

--- a/molecule/cloud-epc-oracle-11-delegated/playbook.yml
+++ b/molecule/cloud-epc-oracle-11-delegated/playbook.yml
@@ -9,6 +9,7 @@
       - "p13390677_112040_Linux-x86-64_1of7.zip"
       - "p13390677_112040_Linux-x86-64_2of7.zip"
     db_port: 1522
+    oracle_db_swap_count: 2096
   roles:
     - role: ansible-role-oracle-db
   become: True
