--- a/molecule/cloud-epc-oracle-11-delegated/molecule.yml
+++ b/molecule/cloud-epc-oracle-11-delegated/molecule.yml
@@ -11,7 +11,7 @@ lint:
     config-file: .yamllint
 platforms:
   - name: test-oracle-db-11
-    shape: large
+    shape: medium
     image: CentOS6_64-bit
     region: EPAM-BY2
     wait_timeout: 3600
