--- a/tasks/system/prepare.yml
+++ b/tasks/system/prepare.yml
@@ -32,7 +32,7 @@
     state: directory
     mode: "0755"
     owner: "{{ oracledb.user }}"
-    group: "{{ oracledb.install_group }}"
+    group: "{{ oracledb.dba_group }}"
   become: True
 
 - name: "Chown install directory to oracle user"
@@ -94,4 +94,3 @@
 
 - name: "Write Oracle profile"
   include_tasks: "../profile/oracle-db-profile.yml"
-  when: oracle_version == 11 or oracle_version == 12
