--- a/tasks/fetch/unknow-transport.yml
+++ b/tasks/fetch/unknow-transport.yml
@@ -1,6 +1,6 @@
 ---
 
-- name: "Warn on unsupported transport"
+- name: Warn on unsupported transport
   fail:
     msg: "This role does not support '{{ transport }}' transport.\
           Please contact team@lean-delivery.com"
