--- a/tasks/system/postinstall.yml
+++ b/tasks/system/postinstall.yml
@@ -1,7 +1,7 @@
 ---
 
-- name: "Clean up install directory"
+- name: Clean up install directory
   file:
     state: absent
-    path: "{{ oracledb.install_directory }}"
+    path: '{{ oracledb.install_directory }}'
   become: True
