--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,12 +1,12 @@
 ---
 galaxy_info:
-  role_name: "oracle_db"
-  author: "Lean Delivery Team <team@lean-delivery.com>"
-  description: "Lean Delivery Oracle Database install"
-  company: "EPAM Systems"
-  issue_tracker_url: "https://github.com/lean-delivery/ansible-role-oracle-db/issues"
-  license: "Apache"
-  min_ansible_version: "2.5"
+  role_name: oracle_db
+  author: Lean Delivery Team <team@lean-delivery.com>
+  description: Lean Delivery Oracle Database install
+  company: EPAM Systems
+  issue_tracker_url: https://github.com/lean-delivery/ansible-role-oracle-db/issues
+  license: Apache
+  min_ansible_version: 2.5
   platforms:
     - name: "EL"
       versions:
