--- a/tasks/profile/oracle-db-profile.yml
+++ b/tasks/profile/oracle-db-profile.yml
@@ -1,8 +1,8 @@
 ---
 
-- name: "Create environment variables for Oracle DB"
+- name: Create environment variables for Oracle DB
   template:
-    src: "env.oracledb.j2"
-    dest: "/etc/profile.d/oracle_env.sh"
-    mode: "0644"
+    src: env.oracledb.j2
+    dest: /etc/profile.d/oracle_env.sh
+    mode: 0644
   become: True
