--- a/vars/oracle11.yml
+++ b/vars/oracle11.yml
@@ -1,69 +1,69 @@
 ---
 
-oracle_default_tablespace_size: "200M"
-oracle_temp_tablespace_size: "100M"
+oracle_default_tablespace_size: 200M
+oracle_temp_tablespace_size: 100M
 
 oracledb:
-  user: "oracle"
-  install_group: "oinstall"
-  dba_group: "dba"
-  install_directory: "/opt/install/oracledb"
-  rsp_template: "db.rsp.{{ oracle_version }}"
-  oracle_home: "{{ oracle_base }}/product/{{ patch_version }}/db_1"
-  filesystemstorage: "{{ oracle_base }}/oradata"
-  characterset: "AL32UTF8"
-  memorylimit: "512"
-  rsp_file: "db.rsp"
-  pwd_file: "pwd.rsp"
+  user: oracle
+  install_group: oinstall
+  dba_group: dba
+  install_directory: /opt/install/oracledb
+  rsp_template: 'db.rsp.{{ oracle_version }}'
+  oracle_home: '{{ oracle_base }}/product/{{ patch_version }}/db_1'
+  filesystemstorage: '{{ oracle_base }}/oradata'
+  characterset: AL32UTF8
+  memorylimit: 512
+  rsp_file: db.rsp
+  pwd_file: pwd.rsp
   cert: True
-  swapfile_path: "{{ oracle_db_swapfile }}"
-  swapfile_bs_size_mb: "1"
-  swapfile_count: "{{ oracle_db_swap_count }}"
-  shm_size_mb: "{{ ansible_memtotal_mb }}"
-  limits_file: "/etc/security/limits.conf"
+  swapfile_path: '{{ oracle_db_swapfile }}'
+  swapfile_bs_size_mb: 1
+  swapfile_count: '{{ oracle_db_swap_count }}'
+  shm_size_mb: {{ ansible_memtotal_mb }}'
+  limits_file: /etc/security/limits.conf
   limits:
-    - "oracle   soft   nofile   1024"
-    - "oracle   hard   nofile   65536"
-    - "oracle   soft   nproc    2047"
-    - "oracle   hard   nproc    16384"
-    - "oracle   soft   stack    10240"
-    - "oracle   hard   stack    32768"
+    - oracle   soft   nofile   1024
+    - oracle   hard   nofile   65536
+    - oracle   soft   nproc    2047
+    - oracle   hard   nproc    16384
+    - oracle   soft   stack    10240
+    - oracle   hard   stack    32768
   sysctl:
-    - {name: "fs.file-max", value: "6815744"}
-    - {name: "kernel.sem", value: "250 32000 100 128"}
-    - {name: "kernel.shmmni", value: "4096"}
-    - {name: "kernel.shmall", value: "1073741824"}
-    - {name: "kernel.shmmax", value: "4398046511104"}
-    - {name: "net.core.rmem_default", value: "262144"}
-    - {name: "net.core.rmem_max", value: "4194304"}
-    - {name: "net.core.wmem_default", value: "262144"}
-    - {name: "net.core.wmem_max", value: "1048576"}
-    - {name: "fs.aio-max-nr", value: "1048576"}
-    - {name: "net.ipv4.ip_local_port_range", value: "9000 65500"}
+    - {name: fs.file-max, value: 6815744}
+    - {name: kernel.sem, value: 250 32000 100 128}
+    - {name: kernel.shmmni, value: 4096}
+    - {name: kernel.shmall, value: 1073741824}
+    - {name: kernel.shmmax, value: 4398046511104}
+    - {name: net.core.rmem_default, value: 262144}
+    - {name: net.core.rmem_max, value: 4194304}
+    - {name: net.core.wmem_default, value: 262144}
+    - {name: net.core.wmem_max, value: 1048576}
+    - {name: fs.aio-max-nr, value: 1048576}
+    - {name: net.ipv4.ip_local_port_range, value: 9000 65500}
   install_requirements:
-    - "binutils"
-    - "gcc"
-    - "gcc-c++"
-    - "glibc"
-    - "glibc-common"
-    - "glibc-devel"
-    - "glibc-headers"
-    - "ksh"
-    - "libaio"
-    - "libaio-devel"
-    - "libgcc"
-    - "libstdc++"
-    - "libstdc++-devel"
-    - "libXext"
-    - "libXtst"
-    - "libX11"
-    - "libXau"
-    - "libXi"
-    - "make"
-    - "sysstat"
-    - "unixODBC"
-    - "unixODBC-devel"
-    - "zlib-devel"
-    - "compat-libcap1"
-    - "compat-libstdc++-33"
-    - "unzip"
+    - binutils
+    - gcc
+    - gcc-c++
+    - glibc
+    - glibc-common
+    - glibc-devel
+    - glibc-headers
+    - ksh
+    - libaio
+    - libaio-devel
+    - libgcc
+    - libstdc++
+    - libstdc++-devel
+    - libXext
+    - libXtst
+    - libX11
+    - libXau
+    - libXi
+    - make
+    - sysstat
+    - unixODBC
+    - unixODBC-devel
+    - zlib-devel
+    - compat-libcap1
+    - compat-libstdc++-33
+    - unzip
