--- a/molecule/cloud-epc-oracle-11-delegated/playbook.yml
+++ b/molecule/cloud-epc-oracle-11-delegated/playbook.yml
@@ -6,8 +6,8 @@
     patch_version: 11.2.0.4
     transport_web: "{{ lookup('env','STORAGE_EPC') }}/oracle-install/11g/11.2.0.4/"
     oracle_images:
-      - "p13390677_112040_Linux-x86-64_1of7.zip"
-      - "p13390677_112040_Linux-x86-64_2of7.zip"
+      - p13390677_112040_Linux-x86-64_1of7.zip
+      - p13390677_112040_Linux-x86-64_2of7.zip
     db_port: 1522
   roles:
     - role: ansible-role-oracle-db
