--- a/molecule/docker-oracle-11/playbook.yml
+++ b/molecule/docker-oracle-11/playbook.yml
@@ -8,7 +8,7 @@
     oracle_images:
       - p13390677_112040_Linux-x86-64_1of7.zip
       - p13390677_112040_Linux-x86-64_2of7.zip
-    oracle_db_swapfile: "/oracle-swapfile-docker-11"
+    oracle_db_swapfile: /oracle-swapfile-docker-11
     db_port: 1522
   roles:
     - role: ansible-role-oracle-db
