--- a/molecule/docker-oracle-12/playbook.yml
+++ b/molecule/docker-oracle-12/playbook.yml
@@ -8,7 +8,7 @@
     oracle_images:
       - linuxamd64_12102_database_1of2.zip
       - linuxamd64_12102_database_2of2.zip
-    oracle_db_swapfile: "/oracle-swapfile-docker-12"
+    oracle_db_swapfile: /oracle-swapfile-docker-12
     db_port: 1522
   roles:
     - role: ansible-role-oracle-db
