--- a/molecule/resources/prepare.yml
+++ b/molecule/resources/prepare.yml
@@ -29,6 +29,11 @@
       delay: 5
       until: update_result.rc == 0
 
+    - name: Wait for server to restart
+      wait_for_connection:
+        delay: 60
+        timeout: 300
+
     - name: Wait for SSH
       wait_for:
         port: '{{ ssh_port }}'
