--- a/molecule/cloud-aws-oracle-xe-delegated/playbook.yml
+++ b/molecule/cloud-aws-oracle-xe-delegated/playbook.yml
@@ -1,11 +1,12 @@
 ---
 - name: Test oracle-db xe from static
-  hosts: oracle_db_ct
+  hosts: all
   vars:
     oracle_version: xe
     transport_web: "{{ lookup('env','STORAGE_AWS') }}/oracle-install"
     oracle_images:
       - "linux.x64_11gR2_xe.zip"
+    oracle_db_swapfile: /oracle-swapfile-docker-xe
   roles:
     - role: ansible-role-oracle-db
   become: True
