--- a/molecule/cloud-epc-oracle-xe-delegated/playbook.yml
+++ b/molecule/cloud-epc-oracle-xe-delegated/playbook.yml
@@ -1,11 +1,11 @@
 ---
 - name: Test oracle-db xe from static
-  hosts: oracle_db_ct
+  hosts: all
   vars:
     oracle_version: xe
     transport_web: "{{ lookup('env','STORAGE_EPC') }}/oracle-install"
     oracle_images:
-      - "linux.x64_11gR2_xe.zip"
+      - linux.x64_11gR2_xe.zip
   roles:
     - role: ansible-role-oracle-db
   become: True
