--- a/molecule/docker-oracle-11/playbook.yml
+++ b/molecule/docker-oracle-11/playbook.yml
@@ -1,15 +1,14 @@
 ---
 - name: Install oracle-db
-  hosts: oracle_db_ct
+  hosts: all
   vars:
     oracle_version: 11
     patch_version: 11.2.0.4
-    transport_web: "{{ lookup('env','STORAGE_EPC') }}/oracle-install/11g/11.2.0.4"
+    transport_web: "{{ lookup('env','STORAGE_AWS') }}/oracle-install/11g/11.2.0.4"
     oracle_images:
       - p13390677_112040_Linux-x86-64_1of7.zip
       - p13390677_112040_Linux-x86-64_2of7.zip
-    oracle_db_swapfile: "/oracle-swapfile-docker-11"
-    oracle_db_swap_count: 2096
+    oracle_db_swapfile: /oracle-swapfile-docker-11
     db_port: 1522
   roles:
     - role: ansible-role-oracle-db
