--- a/molecule/docker-oracle-xe/playbook.yml
+++ b/molecule/docker-oracle-xe/playbook.yml
@@ -1,13 +1,12 @@
 ---
 - name: Install oracle-db
-  hosts: oracle_db_ct
+  hosts: all
   vars:
     oracle_version: xe
-    transport_web: "{{ lookup('env','STORAGE_EPC') }}/oracle-install"
+    transport_web: "{{ lookup('env','STORAGE_AWS') }}/oracle-install"
     oracle_images:
       - linux.x64_11gR2_xe.zip
-    oracle_db_swapfile: "/oracle-swapfile-docker-xe"
-    oracle_db_swap_count: 2096
+    oracle_db_swapfile: /oracle-swapfile-docker-xe
   roles:
     - role: ansible-role-oracle-db
   become: True
